--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="google-site-verification" content="fAXDtbjeztmdqCaXI0b8cNWljidur7pCPJUFR6GsR2w" />
+        <meta name="google-site-verification" content="fAXDtbjeztmdqCaXI0b8cNWljidur7pCPJUFR6GsR2w">
         <link href="style.css" rel="stylesheet">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
